--- a/QGuyBackend/package.json
+++ b/QGuyBackend/package.json
@@ -7,9 +7,10 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.7.2",
-    "hardhat": "^2.9.0",
+    "hardhat": "^2.14.0",
     "hardhat-deploy": "^0.10.5",
     "hardhat-gas-reporter": "^1.0.7",
+    "nodemon": "^2.0.22",
     "prettier": "^2.5.1",
     "solidity-coverage": "^0.7.18"
   },
@@ -31,6 +32,7 @@
   "scripts": {
     "lint": "solhint 'contracts/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "dev": "nodemon API/index.js"
   }
 }
