--- a/QGuyBackend/package.json
+++ b/QGuyBackend/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "body-parser": "^1.20.2",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.7.2",
@@ -11,9 +12,12 @@
     "hardhat": "^2.17.0",
     "hardhat-deploy": "^0.10.5",
     "hardhat-gas-reporter": "^1.0.7",
+    "ioredis": "^5.3.2",
+    "method-override": "^3.0.0",
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.5.1",
+    "redis": "^4.6.7",
     "solidity-coverage": "^0.7.18"
   },
   "dependencies": {
