Successful first connection to mysql

--- a/QGuyBackend/package.json
+++ b/QGuyBackend/package.json
@@ -14,6 +14,7 @@
     "hardhat-gas-reporter": "^1.0.7",
     "ioredis": "^5.3.2",
     "method-override": "^3.0.0",
+    "mysql": "^2.18.1",
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.5.1",
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "mime": "^3.0.0",
+    "mysql2": "^3.6.1",
     "nft.storage": "^6.0.1",
     "path": "^0.12.7",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
