--- a/QGuyBackend/package.json
+++ b/QGuyBackend/package.json
@@ -28,6 +28,7 @@
     "@openzeppelin/contracts": "^4.5.0",
     "@pinata/sdk": "^1.1.23",
     "base64-sol": "^1.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "mime": "^3.0.0",
